--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <nav id="navbar">
         <div id="logo">
-            <img src="logo.jpg" alt="Loading Bookme.com">
+            <img src="Images/logo.jpg" alt="Loading Bookme.com">
         </div>
         <ul>
             <li class="item"><a href="#home">Home</a></li>
